--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.8.6",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
